--- a/index.html
+++ b/index.html
@@ -447,21 +447,21 @@
     <section>
         <div class="gallery-grid">
             <div class="card" data-aos="fade-up">
-                <img src="pics/1.png" alt="מובייל ספירלה" class="card-img" onclick="openLightbox(this)">
+                <img src="1.png" alt="מובייל ספירלה" class="card-img" onclick="openLightbox(this)">
                 <div style="padding: 15px; text-align: center;">
                     <h3 style="color: var(--text-color); font-size: 1.2rem;">מובייל ספירלה</h3>
                 </div>
             </div>
             
             <div class="card" data-aos="fade-up" data-aos-delay="100">
-                <img src="pics/3.png" alt="שרשרת פריחה" class="card-img" onclick="openLightbox(this)">
+                <img src="3.png" alt="שרשרת פריחה" class="card-img" onclick="openLightbox(this)">
                 <div style="padding: 15px; text-align: center;">
                     <h3 style="color: var(--text-color); font-size: 1.2rem;">שרשרת פריחה</h3>
                 </div>
             </div>
             
             <div class="card" data-aos="fade-up" data-aos-delay="200">
-                <img src="pics/4.png" alt="עגילי טיפה" class="card-img" onclick="openLightbox(this)">
+                <img src="4.png" alt="עגילי טיפה" class="card-img" onclick="openLightbox(this)">
                 <div style="padding: 15px; text-align: center;">
                     <h3 style="color: var(--text-color); font-size: 1.2rem;">עגילי טיפה</h3>
                 </div>
