--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     <section class="story-section" data-aos="fade-up">
         <h2 style="color: var(--primary-pink); font-size: 1.8rem; margin-bottom: 25px;">הסיפור שלי</h2>
         
-        <img src="pics/2.png" alt="ליה כדורי" class="story-profile-img">
+        <img src="2.png" alt="ליה כדורי" class="story-profile-img">
 
         <div class="story-text">
             <p>
