--- a/index.html
+++ b/index.html
@@ -471,8 +471,10 @@
             <div class="card" data-aos="fade-up">
                 <img src="5.jpeg" alt="מובייל " class="card-img" onclick="openLightbox(this)">
                 <div style="padding: 15px; text-align: center;">
-                    <h3 style="color: var(--text-color); font-size: 1.2rem;">מוביילים עדינים עשויים חרוזים וקריסטלים שאני יוצרת.
-מעוצבים ליצירת משחק אור מרהיב, מושלמים להוספת נגיעה של יופי טבעי ואנרגיה חיובית לכל חדר</h3>
+                    <h3 style="color: var(--text-color); font-size: 1.2rem;">
+                        מוביילים עדינים עשויים חרוזים וקריסטלים שאני יוצרת.
+.מעוצבים ליצירת משחק אור מרהיב, מושלמים להוספת נגיעה של יופי טבעי ואנרגיה חיובית לכל חדר
+                    </h3>
                 </div>
             </div>
             
