--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
                 <img src="5.jpeg" alt="מובייל " class="card-img" onclick="openLightbox(this)">
                 <div style="padding: 15px; text-align: center;">
                     <h3 style="color: var(--text-color); font-size: 1.2rem;">
-                        מוביילים עדינים עשויים חרוזים וקריסטלים שאני יוצרת.
-.מעוצבים ליצירת משחק אור מרהיב, מושלמים להוספת נגיעה של יופי טבעי ואנרגיה חיובית לכל חדר
+                        מובילים עדינים עשויים חרוזים וקריסטלים	שאני יוצרת.
+מעוצבים ליצירת משחק אור מרהיב, מושלמים להוספת נגיעה של יופי טבעי ואנרגיה חיובית לכל חלל.
                     </h3>
                 </div>
             </div>
@@ -485,7 +485,7 @@
     <footer id="contact">
         <p>Lia's Creations | Handmade with Love</p>
         <div style="margin-top: 15px; font-size: 1rem;">
-            <a href="#">Instagram</a> • <a href="#">WhatsApp</a> • <a href="#">Facebook</a>
+            להזמנות: tal@xi-md.com
         </div>
     </footer>
 
